// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Syncer > generateTemplate > handleEntityChange > step 1`] = `
[
  "handleEntityChange",
  "actionGenerateSchemas",
  "generateTemplate",
  "renderTemplate",
  "generateTemplate",
  "renderTemplate",
  "Template__generated:render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > generateTemplate > scaffolding: model > step 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "render:model",
  "resolveRenderedTemplate",
]
`;
